Bugs: Remove headings, fix spacing

--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -20,7 +20,7 @@ h2 {
 .story_content {
   text-align: left;
   width: 90%;
-  margin: 40px auto;
+  margin: 40px auto 20px;
 }
 
 .ending {
